syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";

option go_package = "api/grpc/v1/email;email_grpc_service";

message UpsertEmailGrpcRequest {
  string tenant = 1;
  string rawEmail = 2;
  google.protobuf.Timestamp  createdAt = 6;
  google.protobuf.Timestamp  updatedAt = 7;
  string id = 8;
  string loggedInUserId = 9;
  SourceFields sourceFields = 10;

  optional string LinkWithType = 11;
  optional string LinkWithId = 12;
}

//Deprecated
message FailEmailValidationGrpcRequest {
  string tenant = 1;
  string emailId = 2;
  string errorMessage = 3;
  string appSource = 4;
  string loggedInUserId = 5;
  string rawEmail = 6;
}

//Deprecated
message PassEmailValidationGrpcRequest {
  string tenant = 1;
  string emailId = 2;
  string appSource = 3;
  string loggedInUserId = 4;
  string rawEmail = 5;
  string isReachable = 6;
  string errorMessage = 7;
  string domain = 8;
  string username = 9;
  string email = 10;
  bool acceptsMail = 11;
  bool canConnectSmtp = 12;
  bool hasFullInbox = 13;
  bool isCatchAll = 14;
  bool isDisabled = 15;
  bool isValidSyntax = 16;
  bool isDisposable = 17;
  bool isRoleAccount = 18;
  bool IsDeliverable = 19;
}

message EmailValidationGrpcRequest {
  string tenant = 1;
  string emailId = 2;
  string appSource = 3;
  string loggedInUserId = 4;
  string rawEmail = 5;
  string email = 6;
  string domain = 7;
  string username = 8;
  bool isValidSyntax = 9;
  bool isRisky = 10;
  bool isFirewalled = 11;
  string Provider = 12;
  string Firewall = 13;
  bool isCatchAll = 14;
  bool canConnectSMTP = 15;
  bool isDeliverable = 16;
  bool isMailboxFull = 17;
  bool isRoleAccount = 18;
  bool isFreeAccount = 19;
  bool smtpSuccess = 20;
  string responseCode = 21;
  string errorCode = 22;
  string description = 23;
  string smtpResponse = 24;
}

message RequestEmailValidationGrpcRequest {
  string id = 1;
  string tenant = 2;
  string appSource = 3;
  string loggedInUserId = 4;
}

message EmailIdGrpcResponse {
  string id = 1;
}

service emailGrpcService {
  rpc UpsertEmail(UpsertEmailGrpcRequest) returns (EmailIdGrpcResponse);
  rpc RequestEmailValidation(RequestEmailValidationGrpcRequest) returns (EmailIdGrpcResponse);
  rpc UpdateEmailValidation(EmailValidationGrpcRequest) returns (EmailIdGrpcResponse);
  // Deprecated
  rpc FailEmailValidation(FailEmailValidationGrpcRequest) returns (EmailIdGrpcResponse);
  // Deprecated
  rpc PassEmailValidation(PassEmailValidationGrpcRequest) returns (EmailIdGrpcResponse);
}
